# pact

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  ENGINE_ASSESSMENT_2026-05-30.md  IDEAS.md  README.md  STRUCTURAL_RISK.md  __init__.py  __main__.py  adaptive_harness.py  adrs.py  ast_utils.py  audit.py  audit_in_place.py  body_catch_loop.py  body_loop.py  broad_backtest.py  bugspec.py  checker.py  cli.py  co_improve.py  conftest.py  constraint_graph.py  context.py  contract_encoder.py  contract_templates.py  defuse.py  disguise.py  django_guard.py  dockerize.py  doctor.py  encoder.py  enrich.py  extractor.py  failure_mode.py  find.py  fixer.py  gan.py  (+94 more)
.devcontainer/: devcontainer.json  setup.sh
.github/actions/pact/: action.yml
.github/workflows/: ci.yml  claude-agent.yml  dogfood.yml  nightly-corpus.yml  pact-auto-pr.yml  pact-ci.yml  pr-graph.yml  precise-scan.yml  publish.yml  self-review.yml
corpus/: auto_pr_state.json
docs/: engagements.md  symbolic-spreadsheet-direction.md
docs/adr/: ADR-001-graph-first-architecture.md  ADR-002-mermaid-over-sarif.md  ADR-003-tla-as-semantic-layer.md  ADR-004-yaml-rules-family-key.md  ADR-005-coro-consumers-frozenset.md  ADR-006-bare-except-reraise-exclusion.md  ADR-007-structure-first-scoring.md  ADR-008-precise-mode-container-isolation.md  ADR-009-monolith-density-signal.md  ADR-010-update-fields-pk-guard.md  ADR-011-bare-except-control-flow-exclusions.md  ADR-012-pragma-no-cover-escape-hatch.md  ADR-013-attribute-access-probe-expr.md  ADR-014-skip-backup-files.md  ADR-015-skip-github-dir.md  ADR-016-defensive-import-probe-stmt.md  ADR-017-pact-fix-patch-generation.md  ADR-018-ast-enclosing-stmt-guard-placement.md  ADR-019-write-tests-regression-generation.md  ADR-020-jedi-type-inference-test-writer.md  ADR-021-corpus-deduplication.md  ADR-022-custom-coroutine-runner-exclusion.md  ADR-023-early-exit-guard-fp-semgrep.md  ADR-036-pact-formal-analysis-toolkit.md  ADR-037-pact-self-loop-architecture.md  ADR-038-loop-iter-1-pact-standalone.md  ADR-039-loop-iter-2-pact-standalone.md  ADR-040-loop-iter-3-pact-standalone.md  ADR-041-loop-iter-4-pact-standalone.md  ADR-042-loop-iter-5-pact-standalone.md  ADR-043-establish-formal-behavioral-contract-for-refactor-py-cut-ver.md  ADR-045-formalize-behavioral-contracts-for-cut-vertex-functions-in-c.md  ADR-048-formalize-behavioral-contracts-for-cut-vertex-functions-in-m.md  ADR-052-formalize-behavioral-contracts-for-cut-vertex-functions-in-p.md  ADR-057-formalize-behavioral-contracts-for-cut-vertex-test-functions.md  ADR-058-isolate-critical-detection-functions-in-failure-mode-analysi.md  ADR-059-isolate-test-utility-functions-from-direct-test-dependencies.md  ADR-060-isolate-cut-vertex-functions-in-intent-py-with-behavioral-co.md  ADR-061-isolate-test-result-construction-behind-formal-contract.md  ADR-062-isolate-cut-vertex-functions-in-enrich-py-behind-stable-inte.md  (+9 more)
docs/tla/: BareExcept.cfg  FormatArgMismatch.cfg  LlmResponseUnguarded.cfg  MissingAwait.cfg  MutableDefaultArg.cfg  OptionalDereference.cfg  Pact.cfg  PactExtractionExample.cfg  PactLoop.cfg  PactLoop.tla  RequiredArgMissing.cfg  SaveWithoutUpdateFields.cfg  UnvalidatedLookupChain.cfg
examples/: demo_violations.py
examples/future-agi/: findings.md
examples/home-assistant/: findings.md
examples/langchain/: findings.md
examples/solidity/: BadToken.sol  GoodToken.sol  YieldBank.sol  YieldBankFixed.sol
examples/solidity/ctf/: .gitignore
examples/solidity/gan/: .gitignore  foundry.toml
examples/solidity/proposer/: foundry.toml
examples/z3/: findings.md
go/checker/: .gitignore  go.mod  main.go
notes/: PACT_DEEP_MAP_2026-06-19.md  PACT_DEEP_MAP_2026-06-19_cross.json
prompts/: context.md  context_improve.md  contract_cegis.md  contract_encode.md  contract_hypothesis.md  contract_params.md  dead_code.md  dead_code_improve.md  find.md  find_improve.md  heal.md  heal_improve.md  improve.md  invariant_skeptic.md  invariant_skeptic_improve.md  plan.md  project_intent.md  project_intent_improve.md  sol_body_fill.md  sol_harness_spec.md  sol_invariant_propose.md  sol_invariant_render.md  spec_gap.md  spec_gap_improve.md  spec_refine.md  spec_refine_improve.md  spec_validate.md  spec_validate_improve.md  triage.md  triage_improve.md  understand.md  verify.md  verify_improve.md
scripts/: auto_pr.py  seed_corpus.py
semgrep/: bare-except.yaml  json-loads-unguarded.yaml  llm-response-unguarded.yaml  optional-dereference.yaml  timeout-not-set.yaml
specs/: anthropic-messages.pact  openai-chat.pact
(+8 files in other folders)
