[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pact-tool"
version = "0.2.0"
description = "Python AST Constraint Tool — formal verification (Z3 + TLA+) for every Python codebase"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jonathan Hill", email = "jonathan.f.hill@gmail.com"},
]
keywords = ["static-analysis", "formal-verification", "z3", "tla+", "ast", "constraints"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "z3-solver>=4.12",
]

[project.optional-dependencies]
llm = ["anthropic>=0.20"]
dev = ["pytest", "hypothesis", "z3-solver", "anthropic"]

[project.scripts]
pact = "pact.cli:main"

[tool.setuptools]
packages = ["pact"]
package-dir = {"pact" = "."}

[tool.pytest.ini_options]
# inherited from pytest.ini
