[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pact-tool"
version = "0.2.0"
description = "formal analysis for the codebases AI builds"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jonathan Hill", email = "jonathan.f.hill@gmail.com"},
]
keywords = ["formal-verification", "static-analysis", "z3", "tla+", "ai-agents", "llm", "bug-detection", "ast", "go", "django", "celery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "z3-solver>=4.12",
]

[project.optional-dependencies]
llm = ["anthropic>=0.20"]
js = ["tree-sitter>=0.21", "tree-sitter-javascript>=0.21", "tree-sitter-typescript>=0.21"]
dev = ["pytest", "hypothesis", "z3-solver", "anthropic", "tree-sitter>=0.21", "tree-sitter-javascript>=0.21", "tree-sitter-typescript>=0.21"]

[project.scripts]
pact = "pact.cli:main"
pact-mcp = "pact.mcp_server:main"

[tool.setuptools]
packages = ["pact"]
package-dir = {"pact" = "."}

[tool.pytest.ini_options]
# inherited from pytest.ini
